--- a/index.html
+++ b/index.html
@@ -88,16 +88,16 @@
 <body>
     <div class="content-wrapper">
         <h2>Hi, my name is Leona Liu.</h2>
-        <img class="portrait" src="https://media.licdn.com/dms/image/D5603AQF5HiMmKNALMw/profile-displayphoto-shrink_800_800/0/1675618843459?e=1687996800&v=beta&t=U-BPiGKic25ENPISoZZVI6BJiXQRLn4xewG25UfoQgQ" alt="Leona Liu's portrait">
+        <img class="portrait" src="https://media.licdn.com/dms/image/D5603AQF5HiMmKNALMw/profile-displayphoto-shrink_800_800/0/1675618843459?e=1701302400&v=beta&t=BGRp8upulPUogOfb6Khmg9d2ezkExo-IKCEfgtKRLe4" alt="Leona Liu's portrait">
         <p align="justify">With over thirteen years of experience as a tax advisor, I am currently a senior manager at Ernst & Young LLP's international tax and transaction services group in Toronto. I specialize in assisting multinational companies with their international tax structuring. Beyond my professional responsibilities, I am deeply committed to supporting marginalized communities and am actively involved in various grassroots organizations.
 
 As the co-chair of EY Canada's AccessAbilities network and one of the firm's Mindfulness champions, I am dedicated to promoting a culture of inclusivity and wellbeing within the workplace. I have also served as the treasurer of Media Action Média, a non-profit organization that amplifies the voices of women in media, and Open Media, a non-profit organization that advocates for an open and surveillance-free internet.
 
 Recently, I served on the board of Sistering, a low-barrier, drop-in shelter for women. Additionally, I volunteer with CPA Canada, providing free personal tax preparation services to low-income communities and seniors. My passion for empowering others drives my commitment to supporting organizations that work towards creating a more equitable society. </p>
         <p>
-            Connect with me on <a href="https://www.linkedin.com/in/leona-liu/" target="_blank">LinkedIn</a>. Or shoot me an <a href="mailto:leonaliu9720@gmail.com">e-mail </a>
+            Connect with me on <a href="https://www.linkedin.com/in/leona-liu/" target="_blank">LinkedIn</a> or read my rants on <a href="https://leonaliu.substack.com target="_blank">"Substack</a>. Or shoot me an <a href="/cdn-cgi/l/email-protection#81ede4eeefe0ede8f4b8b6b3b1c1e6ece0e8edafe2eeec">e-mail </a>
         </p>
  
     </div>
-</body>
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script></body>
 </html>
