--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ As the co-chair of EY Canada's AccessAbilities network and one of the firm's Min
 
 Recently, I served on the board of Sistering, a low-barrier, drop-in shelter for women. Additionally, I volunteer with CPA Canada, providing free personal tax preparation services to low-income communities and seniors. My passion for empowering others drives my commitment to supporting organizations that work towards creating a more equitable society. </p>
         <p>
-            Connect with me on <a href="https://www.linkedin.com/in/leona-liu/" target="_blank">LinkedIn</a> or read my rants on <a href="https://leonaliu.substack.com target="_blank">"Substack</a>. Or shoot me an <a href="/cdn-cgi/l/email-protection#81ede4eeefe0ede8f4b8b6b3b1c1e6ece0e8edafe2eeec">e-mail </a>
+            Connect with me on <a href="https://www.linkedin.com/in/leona-liu/" target="_blank">LinkedIn</a> or read my rants on <a href="https://leonaliu.substack.com target="_blank">Substack</a>. Or shoot me an <a href="/cdn-cgi/l/email-protection#81ede4eeefe0ede8f4b8b6b3b1c1e6ece0e8edafe2eeec">e-mail </a>
         </p>
  
     </div>
