--- a/index.html
+++ b/index.html
@@ -3,101 +3,115 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>leonaliu.com</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <title>Leona Liu</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/svg+xml" href="https://upload.wikimedia.org/wikipedia/commons/7/70/Eo_circle_purple_letter-l.svg">
     <style>
         * {
             box-sizing: border-box;
+            margin: 0;
+            padding: 0;
         }
         
         body {
-            font-family: 'Roboto', sans-serif;
-            line-height: 1.8;
-            margin: 0;
-            color: #333;
+            font-family: 'Open Sans', sans-serif;
+            line-height: 1.6;
+            color: #000000; /* Black font color */
             background-color: #f8f9fa;
         }
 
-        h1 {
-            font-size: 36px;
-            font-weight: 700;
-            margin-bottom: 30px;
-            color: #212529;
-        }
-
-        h2 {
+        header {
+            background-color: #d3d3d3; /* Light grey header */
+            color: #6a0dad; /* Purple header text */
+            text-align: center;
+            padding: 15px 0;
             font-size: 24px;
             font-weight: 700;
-            margin-bottom: 30px;
-            color: #483248;
-        }
-
-        a {
-            color: #007bff;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        a:hover {
-            color: #0056b3;
-        }
-
-        p {
-            margin-bottom: 20px;
-        }
-
-        .contact {
-            font-weight: bold;
-        }
-
-        img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin-bottom: 30px;
-            border-radius: 5px;
         }
 
         .content-wrapper {
-            background-color: #ffffff;
-            padding: 40px;
-            border-radius: 5px;
-            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+            padding: 30px;
             max-width: 800px;
-            margin: 50px auto;
+            margin: 20px auto;
+            background-color: #ffffff;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: box-shadow 0.3s ease-in-out;
         }
 
-        .portrait {
-            width: 250px;
-            height: auto;
-            border-radius: 50%;
+        .content-wrapper:hover {
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        }
+
+		img.portrait {
+		    width: 100px; /* Adjust this value to change the size of the image */
+		    height: 100px; /* Set the height to be the same as the width for a square shape */
+		    border-radius: 5px; /* Slightly rounded corners */
+		    display: block;
+		    margin: 0 auto 30px;
+		    transition: transform 0.3s ease-in-out;
+		    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+		    object-fit: cover; /* Ensures the image covers the square area */
+		    object-position: 60% 50%; /* Shifts the image to focus more on the right side */
+		}
+		
+        img.portrait:hover {
+            transform: scale(1.05);
+        }
+
+        p {
+            font-size: 16px;
+            margin-bottom: 20px;
+            text-align: justify;
+        }
+
+        footer {
+            background-color: #d3d3d3; /* Light grey footer */
+            color: #6a0dad; /* Purple footer text */
+            text-align: center;
+            padding: 20px 0;
+            font-size: 16px;
+        }
+
+        footer a {
+            color: #6a0dad; /* Purple footer links */
+            text-decoration: none;
+            margin: 0 10px;
+        }
+
+        footer a:hover {
+            color: #0056b3;
         }
 
         @media screen and (max-width: 768px) {
+            header, footer {
+                font-size: 20px;
+            }
+
             .content-wrapper {
                 padding: 20px;
                 margin: 20px;
             }
 
-            h2 {
-                font-size: 20px;
+            img.portrait {
+                width: 150px;
             }
         }
     </style>
 </head>
 <body>
+    <header>
+        Leona Liu
+    </header>
     <div class="content-wrapper">
-        <h2>Hi, my name is Leona Liu.</h2>
-        <img class="portrait" src="https://media.licdn.com/dms/image/D5603AQF5HiMmKNALMw/profile-displayphoto-shrink_800_800/0/1675618843459?e=1701302400&v=beta&t=BGRp8upulPUogOfb6Khmg9d2ezkExo-IKCEfgtKRLe4" alt="Leona Liu's portrait">
-        <p align="justify">With over thirteen years of experience as a tax advisor, I am currently a senior manager at Ernst & Young LLP's international tax and transaction services group in Toronto. I specialize in assisting multinational companies with their international tax structuring. Beyond my professional responsibilities, I am deeply committed to supporting marginalized communities and am actively involved in various grassroots organizations.
-
-As the co-chair of EY Canada's AccessAbilities network and one of the firm's Mindfulness champions, I am dedicated to promoting a culture of inclusivity and wellbeing within the workplace. I have also served as the treasurer of Media Action Média, a non-profit organization that amplifies the voices of women in media, and Open Media, a non-profit organization that advocates for an open and surveillance-free internet.
-
-Recently, I served on the board of Sistering, a low-barrier, drop-in shelter for women. Additionally, I volunteer with CPA Canada, providing free personal tax preparation services to low-income communities and seniors. My passion for empowering others drives my commitment to supporting organizations that work towards creating a more equitable society. </p>
-        <p>
-            Connect with me on <a href="https://www.linkedin.com/in/leona-liu/" target="_blank">LinkedIn</a> or read my rants on <a href="https://leonaliu.substack.com target="_blank">Substack</a>. Or shoot me an <a href="/cdn-cgi/l/email-protection#81ede4eeefe0ede8f4b8b6b3b1c1e6ece0e8edafe2eeec">e-mail </a>
-        </p>
- 
+        <img class="portrait" src="https://github.com/leonaliuism/leonaliuism.github.io/blob/main/You%20Belong%20headshot.jpg?raw=true" alt="Leona Liu's portrait">
+        <p>With over thirteen years of experience as a tax advisor, I am currently a senior manager at Ernst & Young LLP's international tax and transaction services group in Toronto. I specialize in assisting multinational companies with their international tax structuring. Beyond my professional responsibilities, I am deeply committed to supporting marginalized communities and am actively involved in various grassroots organizations. As the co-chair of EY Canada's AccessAbilities network and one of the firm's Mindfulness champions, I am dedicated to promoting a culture of inclusivity and wellbeing within the workplace. I have also served as the treasurer of Media Action Média, a non-profit organization that amplifies the voices of women in media, and Open Media, a non-profit organization that advocates for an open and surveillance-free internet. Recently, I served on the board of Sistering, a low-barrier, drop-in shelter for women. Additionally, I volunteer with CPA Canada, providing free personal tax preparation services to low-income communities and seniors. My passion for empowering others drives my commitment to supporting organizations that work towards creating a more equitable society.</p>
     </div>
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script></body>
+    <footer>
+        <a href="https://leonaliu.substack.com">Substack</a> | 
+        <a href="https://www.linkedin.com/in/leona-liu/" target="_blank">LinkedIn</a> | 
+        <a href="mailto:info@leonaliu.com">Contact</a>
+    </footer>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+</body>
 </html>
