--- a/index.html
+++ b/index.html
@@ -14,18 +14,21 @@
         }
         
         body {
-            font-family: 'Open Sans', sans-serif;
+            font-family: 'Optima', sans-serif;
             line-height: 1.6;
             color: #000000; /* Black font color */
             background-color: #f8f9fa;
         }
 
         header {
-            background-color: #d3d3d3; /* Light grey header */
-            color: #6a0dad; /* Purple header text */
+            font-family: 'Impact', sans-serif;
+			background-color: #808080; /* Dark grey header */
+            color: #FFFFFF; /* White header text */
             text-align: center;
+			font-weight: bold;
             padding: 15px 0;
-            font-size: 24px;
+            font-size: 36px;
+		    letter-spacing: 2px;
             font-weight: 700;
         }
 
@@ -44,15 +47,15 @@
         }
 
 		img.portrait {
-		    width: 100px; /* Adjust this value to change the size of the image */
-		    height: 100px; /* Set the height to be the same as the width for a square shape */
+		    width: 180px; /* Adjust this value to change the size of the image */
+		    height: 180px; /* Set the height to be the same as the width for a square shape */
 		    border-radius: 5px; /* Slightly rounded corners */
 		    display: block;
 		    margin: 0 auto 30px;
 		    transition: transform 0.3s ease-in-out;
 		    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 		    object-fit: cover; /* Ensures the image covers the square area */
-		    object-position: 60% 50%; /* Shifts the image to focus more on the right side */
+		    object-position: 55% 45%; /* Shifts the image to focus more on the right side */
 		}
 		
         img.portrait:hover {
@@ -80,7 +83,7 @@
         }
 
         footer a:hover {
-            color: #0056b3;
+            color: #CBC3E3;
         }
 
         @media screen and (max-width: 768px) {
