--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ My passion for empowering others drives my commitment to supporting organization
     <footer>
         <a href="https://leonaliu.substack.com">Substack</a> | 
         <a href="https://www.linkedin.com/in/leona-liu/" target="_blank">LinkedIn</a> | 
-        <a href="mailto:info@leonaliu.com">Contact</a>
+       	<a href="javascript:void(0);" onclick="window.location.href='mailto:info@leonaliu.com'">Contact</a>
     </footer>
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
 </body>
