--- a/index.html
+++ b/index.html
@@ -108,11 +108,9 @@
     <div class="content-wrapper">
         <img class="portrait" src="https://github.com/leonaliuism/leonaliuism.github.io/blob/main/You%20Belong%20headshot.jpg?raw=true" alt="Leona Liu's portrait">
         <h2>about me</h2> <!-- New heading for the title -->
-	    <p>I am a Senior Advisor at the Department of Finance within the Tax Legislation Division of the Tax Policy Branch. I was previously a senior manager in Ernst & Young LLP's international tax and transaction services group in Toronto where I spent over fourteen years of experience as a tax advisor assisting multinational companies with their international tax structuring. 
+	    <p>I am a Senior Advisor in the Tax Legislation Division of the Tax Policy Branch at the Department of Finance. Previously, I was a Senior Manager in Ernst & Young LLP’s International Tax and Transaction Services group in Toronto, where I spent over 14 years advising multinational companies on international tax structuring. I am also a facilitator for CPA Canada’s In-Depth Tax Program, helping develop the next generation of tax professionals.
 
-Beyond my professional responsibilities, I am deeply committed to supporting marginalized communities and am actively involved in various grassroots organizations. As the co-chair of EY Canada's AccessAbilities network and one of the firm's Mindfulness champions, I am dedicated to promoting a culture of inclusivity and wellbeing within the workplace. I have also served as the treasurer of Media Action Média, a non-profit organization that amplifies the voices of women in media, and Open Media, a non-profit organization that advocates for an open and surveillance-free internet. Recently, I served on the board of Sistering, a low-barrier, drop-in shelter for women. Additionally, I volunteer with CPA Canada, providing free personal tax preparation services to low-income communities and seniors. 
-
-My passion for empowering others drives my commitment to supporting organizations that work towards creating a more equitable society.</p>
+Driven by a passion for equity and empowerment, I actively support organizations working toward a more inclusive society. I have been deeply involved with grassroots initiatives, including serving as co-chair of EY Canada’s AccessAbilities Network and as one of EY Canada’s Mindfulness Champions. Most recently, I was a board member at Sistering, a low-barrier drop-in shelter for women. I also volunteer with CPA Canada, providing free personal tax preparation services to low-income individuals and seniors.</p>
     </div>
     <footer>
         <a href="https://leonaliu.substack.com">Substack</a> | 
